// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewComplaintContainer Snapshots should match question block 0 1`] = `
<div
  className="new-complaint-container"
>
  <ProgressMeter
    blockIndex={0}
    max={5}
    min={-1}
  />
  <div
    className="question-block"
    key="questionBlock-1"
  >
    <h3
      className="question-block__headline"
    >
      Tell us about the call.
    </h3>
    <div
      className="complaint-question"
      key="subject"
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <label
        htmlFor="subject"
      >
        Subject
      </label>
      <input
        id="subject"
        maxLength="255"
        onChange={[Function]}
        placeholder=""
        required={true}
        type="text"
        value=""
      />
    </div>
    <div
      className="complaint-question"
      key="description"
    >
      <label
        htmlFor="description"
      >
        Description
      </label>
      <textarea
        id="description"
        onChange={[Function]}
        placeholder=""
        required={true}
        value=""
      />
    </div>
    <BlockNavBtnGroup
      blockIndex={0}
      handleQuestionBlockNavigation={[Function]}
      isNextBtnDisabled={true}
    />
  </div>
</div>
`;

exports[`NewComplaintContainer Snapshots should match question block 1 1`] = `
<div
  className="new-complaint-container"
>
  <ProgressMeter
    blockIndex={1}
    max={5}
    min={-1}
  />
  <div
    className="question-block"
    key="questionBlock-2"
  >
    <h3
      className="question-block__headline"
    >
      Business or pleasure?
    </h3>
    <div
      className="complaint-question"
      key="isSoliciting"
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <label
        htmlFor="isSoliciting"
      >
        Did the call/message that you are reporting advertise any type of property, goods, or services?
      </label>
      <select
        id="isSoliciting"
        name="isSoliciting"
        onChange={[Function]}
        placeholder=""
        required={true}
        value="-"
      >
        <option
          key="isSoliciting--"
          value="-"
        >
          -
        </option>
        <option
          key="isSoliciting-Yes"
          value="Yes"
        >
          Yes
        </option>
        <option
          key="isSoliciting-No"
          value="No"
        >
          No
        </option>
      </select>
    </div>
    <div
      className="complaint-question"
      key="typeOfSolicit"
      style={
        Object {
          "display": "none",
        }
      }
    >
      <label
        htmlFor="typeOfSolicit"
      >
        Type of Property, Goods, or Services
      </label>
      <input
        id="typeOfSolicit"
        maxLength="255"
        onChange={[Function]}
        placeholder=""
        required={true}
        type="text"
        value=""
      />
    </div>
    <div
      className="complaint-question"
      key="doneBusinessWith"
      style={
        Object {
          "display": "none",
        }
      }
    >
      <label
        htmlFor="doneBusinessWith"
      >
        Have you or anyone else in your household done any business with the caller / company within the past 18 months immediately before you received the call / message?
      </label>
      <select
        id="doneBusinessWith"
        name="doneBusinessWith"
        onChange={[Function]}
        placeholder=""
        required={true}
        value="-"
      >
        <option
          key="doneBusinessWith--"
          value="-"
        >
          -
        </option>
        <option
          key="doneBusinessWith-Yes"
          value="Yes"
        >
          Yes
        </option>
        <option
          key="doneBusinessWith-No"
          value="No"
        >
          No
        </option>
        <option
          key="doneBusinessWith-Uncertain"
          value="Uncertain"
        >
          Uncertain
        </option>
      </select>
    </div>
    <div
      className="complaint-question"
      key="inquiredWith"
      style={
        Object {
          "display": "none",
        }
      }
    >
      <label
        htmlFor="inquiredWith"
      >
        Have you or anyone else in your household made any inquiry or application to the caller/company within the 3 months immediately before you received the call/message?
      </label>
      <select
        id="inquiredWith"
        name="inquiredWith"
        onChange={[Function]}
        placeholder=""
        required={true}
        value="-"
      >
        <option
          key="inquiredWith--"
          value="-"
        >
          -
        </option>
        <option
          key="inquiredWith-Yes"
          value="Yes"
        >
          Yes
        </option>
        <option
          key="inquiredWith-No"
          value="No"
        >
          No
        </option>
        <option
          key="inquiredWith-Uncertain"
          value="Uncertain"
        >
          Uncertain
        </option>
      </select>
    </div>
    <div
      className="complaint-question"
      key="householdRelation"
      style={
        Object {
          "display": "none",
        }
      }
    >
      <label
        htmlFor="householdRelation"
      >
        Do you or anyone in your household have a personal relationship with the individual that made the call?
      </label>
      <select
        id="householdRelation"
        name="householdRelation"
        onChange={[Function]}
        placeholder=""
        required={true}
        value="-"
      >
        <option
          key="householdRelation--"
          value="-"
        >
          -
        </option>
        <option
          key="householdRelation-Yes"
          value="Yes"
        >
          Yes
        </option>
        <option
          key="householdRelation-No"
          value="No"
        >
          No
        </option>
        <option
          key="householdRelation-Uncertain"
          value="Uncertain"
        >
          Uncertain
        </option>
      </select>
    </div>
    <div
      className="complaint-question"
      key="permissionToCall"
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <label
        htmlFor="permissionToCall"
      >
        Have you or anyone else in your household or business given the caller/company permission to call?
      </label>
      <select
        id="permissionToCall"
        name="permissionToCall"
        onChange={[Function]}
        placeholder=""
        required={true}
        value="-"
      >
        <option
          key="permissionToCall--"
          value="-"
        >
          -
        </option>
        <option
          key="permissionToCall-Yes"
          value="Yes"
        >
          Yes
        </option>
        <option
          key="permissionToCall-No"
          value="No"
        >
          No
        </option>
        <option
          key="permissionToCall-Uncertain"
          value="Uncertain"
        >
          Uncertain
        </option>
      </select>
    </div>
    <div
      className="complaint-question"
      key="writtenPermission"
      style={
        Object {
          "display": "none",
        }
      }
    >
      <label
        htmlFor="writtenPermission"
      >
        Did you give permission to the caller/business to call you in writing?
      </label>
      <select
        id="writtenPermission"
        name="writtenPermission"
        onChange={[Function]}
        placeholder="optional"
        required={false}
        value="-"
      >
        <option
          key="writtenPermission--"
          value="-"
        >
          -
        </option>
        <option
          key="writtenPermission-Yes"
          value="Yes"
        >
          Yes
        </option>
        <option
          key="writtenPermission-No"
          value="No"
        >
          No
        </option>
      </select>
    </div>
    <div
      className="complaint-question"
      key="dateOfPermission"
      style={
        Object {
          "display": "none",
        }
      }
    >
      <label
        htmlFor="dateOfPermission"
      >
        Date you provided permission to the caller/company to call
      </label>
      <input
        id="dateOfPermission"
        maxLength="255"
        onChange={[Function]}
        placeholder="optional"
        required={false}
        type="date"
        value=""
      />
    </div>
    <BlockNavBtnGroup
      blockIndex={1}
      handleQuestionBlockNavigation={[Function]}
      isNextBtnDisabled={true}
    />
  </div>
</div>
`;

exports[`NewComplaintContainer Snapshots should match question block 2 1`] = `
<div
  className="new-complaint-container"
>
  <ProgressMeter
    blockIndex={2}
    max={5}
    min={-1}
  />
  <div
    className="question-block"
    key="questionBlock-3"
  >
    <h3
      className="question-block__headline"
    >
      The nitty gritty
    </h3>
    <div
      className="complaint-question"
      key="date"
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <label
        htmlFor="date"
      >
        Date of Your Issue/Problem
      </label>
      <input
        id="date"
        maxLength="255"
        onChange={[Function]}
        placeholder=""
        required={true}
        type="date"
        value=""
      />
    </div>
    <div
      className="complaint-question"
      key="time"
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <label
        htmlFor="time"
      >
        Time of Your Issue/Problem
      </label>
      <input
        id="time"
        maxLength="255"
        onChange={[Function]}
        placeholder=""
        required={true}
        type="time"
        value=""
      />
    </div>
    <div
      className="complaint-question"
      key="typeOfCall"
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <label
        htmlFor="typeOfCall"
      >
        Type of Call or Message
      </label>
      <select
        id="typeOfCall"
        name="typeOfCall"
        onChange={[Function]}
        placeholder=""
        required={true}
        value=""
      >
        <option
          key="typeOfCall--"
          value="-"
        >
          -
        </option>
        <option
          key="typeOfCall-Abandoned Calls"
          value="Abandoned Calls"
        >
          Abandoned Calls
        </option>
        <option
          key="typeOfCall-Live Voice"
          value="Live Voice"
        >
          Live Voice
        </option>
        <option
          key="typeOfCall-Prerecorded Voice"
          value="Prerecorded Voice"
        >
          Prerecorded Voice
        </option>
        <option
          key="typeOfCall-Text Message"
          value="Text Message"
        >
          Text Message
        </option>
      </select>
    </div>
    <div
      className="complaint-question"
      key="receivedCallerId"
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <label
        htmlFor="receivedCallerId"
      >
        Did you receive Caller ID Information?
      </label>
      <select
        id="receivedCallerId"
        name="receivedCallerId"
        onChange={[Function]}
        placeholder=""
        required={true}
        value="-"
      >
        <option
          key="receivedCallerId--"
          value="-"
        >
          -
        </option>
        <option
          key="receivedCallerId-Yes"
          value="Yes"
        >
          Yes
        </option>
        <option
          key="receivedCallerId-No"
          value="No"
        >
          No
        </option>
        <option
          key="receivedCallerId-Don't have caller id"
          value="Don't have caller id"
        >
          Don't have caller id
        </option>
        <option
          key="receivedCallerId-Uncertain"
          value="Uncertain"
        >
          Uncertain
        </option>
      </select>
    </div>
    <div
      className="complaint-question"
      key="callerIdNumber"
      style={
        Object {
          "display": "none",
        }
      }
    >
      <label
        htmlFor="callerIdNumber"
      >
        Caller ID Number
      </label>
      <input
        id="callerIdNumber"
        maxLength="255"
        onChange={[Function]}
        placeholder="optional"
        required={false}
        type="tel"
        value=""
      />
    </div>
    <div
      className="complaint-question"
      key="callerIdName"
      style={
        Object {
          "display": "none",
        }
      }
    >
      <label
        htmlFor="callerIdName"
      >
        Caller ID Name
      </label>
      <input
        id="callerIdName"
        maxLength="255"
        onChange={[Function]}
        placeholder="optional"
        required={false}
        type="text"
        value=""
      />
    </div>
    <BlockNavBtnGroup
      blockIndex={2}
      handleQuestionBlockNavigation={[Function]}
      isNextBtnDisabled={true}
    />
  </div>
</div>
`;

exports[`NewComplaintContainer Snapshots should match question block 3 1`] = `
<div
  className="new-complaint-container"
>
  <ProgressMeter
    blockIndex={3}
    max={5}
    min={-1}
  />
  <div
    className="question-block"
    key="questionBlock-4"
  >
    <h3
      className="question-block__headline"
    >
      Conversational pleasantries
    </h3>
    <div
      className="complaint-question"
      key="receivedBusinessName"
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <label
        htmlFor="receivedBusinessName"
      >
        Was the caller's business name provided during the call/message?
      </label>
      <select
        id="receivedBusinessName"
        name="receivedBusinessName"
        onChange={[Function]}
        placeholder=""
        required={true}
        value="-"
      >
        <option
          key="receivedBusinessName--"
          value="-"
        >
          -
        </option>
        <option
          key="receivedBusinessName-Yes"
          value="Yes"
        >
          Yes
        </option>
        <option
          key="receivedBusinessName-No"
          value="No"
        >
          No
        </option>
        <option
          key="receivedBusinessName-Uncertain"
          value="Uncertain"
        >
          Uncertain
        </option>
      </select>
    </div>
    <div
      className="complaint-question"
      key="nameAtBeginning"
      style={
        Object {
          "display": "none",
        }
      }
    >
      <label
        htmlFor="nameAtBeginning"
      >
        Was the business name provided at the beginning of the call/message?
      </label>
      <select
        id="nameAtBeginning"
        name="nameAtBeginning"
        onChange={[Function]}
        placeholder=""
        required={true}
        value="-"
      >
        <option
          key="nameAtBeginning--"
          value="-"
        >
          -
        </option>
        <option
          key="nameAtBeginning-Yes"
          value="Yes"
        >
          Yes
        </option>
        <option
          key="nameAtBeginning-No"
          value="No"
        >
          No
        </option>
      </select>
    </div>
    <div
      className="complaint-question"
      key="providedAdvertiserName"
      style={
        Object {
          "display": "none",
        }
      }
    >
      <label
        htmlFor="providedAdvertiserName"
      >
        Please provide the name of the advertiser provided during the call
      </label>
      <input
        id="providedAdvertiserName"
        maxLength="255"
        onChange={[Function]}
        placeholder=""
        required={true}
        type="text"
        value=""
      />
    </div>
    <div
      className="complaint-question"
      key="providedAdvertiserNumber"
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <label
        htmlFor="providedAdvertiserNumber"
      >
        Provide the advertiser's phone number given during the call.
      </label>
      <input
        id="providedAdvertiserNumber"
        maxLength="255"
        onChange={[Function]}
        placeholder="optional"
        required={false}
        type="tel"
        value=""
      />
    </div>
    <div
      className="complaint-question"
      key="addtlInfo"
    >
      <label
        htmlFor="addtlInfo"
      >
        Addtl. Info
      </label>
      <textarea
        id="addtlInfo"
        onChange={[Function]}
        placeholder="optional"
        required={false}
        value=""
      />
    </div>
    <BlockNavBtnGroup
      blockIndex={3}
      handleQuestionBlockNavigation={[Function]}
      isNextBtnDisabled={true}
    />
  </div>
</div>
`;
